# bevy_component_extras

./: Cargo.toml  README.md
src/: components.rs
