[package]
name = "bevy_component_extras"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/rydb/bevy_component_extras"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "A crate containing QOL bevy components for common features that other crates might want to interface with."

[dependencies]
bevy = { version = "*"}
bevy_mod_raycast = "0.13.1"
glam = "0.24.0"
egui = "0.22.0"

[lib]
crate-type=["dylib"]
#crate-type=["staticlib", "lib"]